# bambi

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  bambi.c  bambi.h  bclfile.c  bclfile.h  config.mk  configure.ac  decode.c  filterfile.c  filterfile.h  hts_addendum.c  hts_addendum.h  i2b.c  index.html  posfile.c  posfile.h  style.css
.github/workflows/: create-release.yml  docker.yml  lint-and-test-build-dockerfile.yml  testing_and_building_repo.yml
.travis/: clone
docker/: Dockerfile
m4/: ax_with_htslib.m4  hts_prog_cc_warnings.m4
manual/: command-line-sidebar.html  command-line-usage.html  standard-options.html
src/: Makefile.am  adapters.c  adapters.h  array.c  array.h  bambi.c  bambi.h  bambi_utils.c  bambi_utils.h  bamit.c  bamit.h  bclfile.c  bclfile.h  check_bcl.c  chrsplit.c  crc.c  crc.h  decode.c  decode.h  filterfile.c  filterfile.h  hash_table.c  hash_table.h  hts_addendum.c  hts_addendum.h  i2b.c  parse.c  parse.h  parse_bam.c  parse_bam.h  posfile.c  posfile.h  read2tags.c  rts.c  rts.h  select.c  seqchksum.c  seqchksum.h  spatial_filter.c  substitution_analysis.c  (+1 more)
test/: Makefile.am  bcl_gen.py  t_adapters.c  t_array.c  t_bamit.c  t_bclfile.c  t_chrsplit.c  t_decode.c  t_filterfile.c  t_i2b.c  t_posfile.c  t_read2tags.c  t_sa.c  t_select.c  t_seqchksum.c  t_sf.c  t_update.c
test/bclfile/: Makefile.am  bclfile.c  t_bclfile.c
test/data/: 10503_1_fix_mate.sam  adapters.bam  adapters.fasta  bamit.bam  bamit_empty.bam  decode_1.sam  decode_2.sam  decode_3.sam  decode_3.tag  decode_3i.sam  decode_4.sam  decode_4.tag  decode_5.sam  decode_5.tag  decode_6.tag  read2tags.sam  read2tags_5.sam  s_1_1101.filter  sa.bam  select_1_human.sam  seqchksum.bam  sf.bam  sf2.bam  test.clocs  test.locs  update_1.sam
test/data/160916_miseq_0966_FC/Data/Intensities/BaseCalls/L001/: s_1_1102.filter  s_1_2102.filter
test/data/160916_miseq_0966_FC/Data/Intensities/BaseCalls/L002/: s_2_1101.filter
test/data/160916_miseq_0966_FC/Data/Intensities/L001/: s_1_1101.locs
test/data/160916_miseq_0966_FC/Data/Intensities/L002/: s_2_2101.locs  s_2_2102.locs
test/data/160916_miseq_0966_FC_missing/: RunInfo.xml  runParameters.xml
test/data/160916_miseq_0966_FC_missing/Data/Intensities/BaseCalls/L002/: s_2_2101.filter
test/data/160916_miseq_0966_FC_missing/Data/Intensities/L002/: s_2_1102.locs
test/data/160919_hiseq2500_4966_FC/: RunInfo.xml  barcodes_ci  barcodes_i1i3_sep  barcodes_i2  runParameters.xml
test/data/160919_hiseq2500_4966_FC/Data/Intensities/BaseCalls/L001/: s_1_1101.filter  s_1_1102.filter  s_1_1201.filter  s_1_1202.filter  s_1_1301.filter  s_1_1302.filter  s_1_2101.filter  s_1_2102.filter  s_1_2201.filter  s_1_2202.filter  s_1_2301.filter  s_1_2302.filter
test/data/160919_hiseq2500_4966_FC/Data/Intensities/L001/: s_1_1101.clocs  s_1_1102.clocs  s_1_1201.clocs  s_1_1202.clocs  s_1_1301.clocs  s_1_1302.clocs  s_1_2101.clocs  s_1_2102.clocs  s_1_2201.clocs  s_1_2202.clocs  s_1_2301.clocs  s_1_2302.clocs
test/data/160919_hiseq4000_7984_FC/: RunInfo.xml  runParameters.xml
test/data/160919_hiseq4000_7984_FC/Data/Intensities/: s.locs
test/data/160919_hiseq4000_7984_FC/Data/Intensities/BaseCalls/L001/: s_1_1101.filter  s_1_1102.filter  s_1_1201.filter  s_1_1202.filter  s_1_2101.filter  s_1_2102.filter  s_1_2201.filter  s_1_2202.filter
test/data/160919_hiseqx_0557_FC/: RunInfo.xml
test/data/160919_hiseqx_0557_FC/Data/Intensities/: s.locs
test/data/160919_hiseqx_0557_FC/Data/Intensities/BaseCalls/L001/: s_1_1101.filter  s_1_1102.filter  s_1_1201.filter  s_1_1202.filter  s_1_2101.filter  s_1_2102.filter  s_1_2201.filter  s_1_2202.filter
test/data/160919_nextseq_6230_FC/: RunInfo.xml  runParameters.xml
test/data/160919_nextseq_6230_FC/Data/Intensities/BaseCalls/L001/: 0032.bcl.bgzf  s_1.bci  s_1.filter
test/data/160919_nextseq_6230_FC/Data/Intensities/L001/: s_1.locs
test/data/novaseqX/: RunInfo.xml
test/data/novaseq_corrupt/Data/Intensities/BaseCalls/L001/C2.1/: L001_1.cbcl  x
test/data/novaseq_missing/: RunParameters.xml
test/decode/: Makefile.am  decode.c  t_decode.c
test/decode/data/: 6383_8.sam
test/filterfile/: Makefile.am  filterfile.c  t_filterfile.c
test/i2b/: Makefile.am  bcl_gen.py  i2b.c  t_i2b.c
test/posfile/: Makefile.am  posfile.c  t_posfile.c
