ACLOCAL_AMFLAGS= -I m4
TESTS = test/posfile/t_posfile test/filterfile/t_filterfile test/bclfile/t_bclfile test/decode/t_decode test/i2b/t_i2b
SUBDIRS = src test/posfile test/bclfile test/filterfile test/decode test/i2b
#DIST_SUBDIRS = test/decode/data test/decode/out test/i2b/data test/i2b/out
dist_doc_DATA = README.md LICENSE
AM_COLOR_TESTS=always
